Camino only - Bug 383827: Preserve order when filtering bookmarks. r/sr=josh